fixed some overlap between explore and story card

--- a/client/src/screens/Explore/Explore.css
+++ b/client/src/screens/Explore/Explore.css
@@ -56,7 +56,7 @@
   }
 
   .story-card-container {
-    width: 50vw;
+    width: 34vw;
   }
 }
 
